--- a/index.html
+++ b/index.html
@@ -120,53 +120,53 @@
     </section>
 
     <section class="details">
-      <div class="text__container">
-        <ul class="items__text list">
+      <div class="details__container">
+        <ul class="details__text list">
           
             <li>
-              <div class="clients">
-                <svg class="clients-icon" width="70" height="70">
+              <div class="details__clients">
+                <svg class="details__icon" width="70" height="70">
                   <use href="./img/icons.svg#icon-antenna-1"></use>
                 </svg>
               </div>
             
-            <h3 class="items">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="items__text">
+            <h3 class="details__items">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="details__text">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
-            <div class="clients">
-              <svg class="clients-icon" width="70" height="70">
+            <div class="details__clients">
+              <svg class="details__icon" width="70" height="70">
                 <use href="./img/icons.svg#icon-clock-1"></use>
               </svg>
             </div>
-            <h3 class="items ">ПУНКТУАЛЬНІСТЬ</h3>
-            <p class="items__text">
+            <h3 class="details__items ">ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="details__text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <div class="clients">
-              <svg class="clients-icon" width="70" height="70">
+            <div class="details__clients">
+              <svg class="details__icon" width="70" height="70">
                 <use href="./img/icons.svg#icon-diagram-1"></use>
               </svg>
             </div>
-            <h3 class="items">ПЛАНУВАННЯ</h3>
-            <p class="items__text">
+            <h3 class="details__items">ПЛАНУВАННЯ</h3>
+            <p class="details__text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <div class="clients">
-              <svg class="clients-icon" width="70" height="70">
+            <div class="details__clients">
+              <svg class="details__icon" width="70" height="70">
                 <use href="./img/icons.svg#icon-astronaut-1"></use>
               </svg>
             </div>
-            <h3 class="items">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p class="items__text">
+            <h3 class="details__items">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p class="details__text">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
@@ -181,21 +181,21 @@
         <h2 class="product__text">Чим ми займаємося</h2>
         <ul class="product__list list">
           <li class="product__picture">
-            <div class="desk">
+            <div class="product__wrap">
               <img src="img/img.jpg" width="370" alt="фото1" />
-              <p class=" desk__text">Десктопні додатки</p>
+              <p class=" product__mob">Десктопні додатки</p>
             </div> 
           </li>
           <li class="product__picture">
-            <div class="desk">
+            <div class="product__wrap">
               <img src="img/img1.jpg" width="370" alt="фото2" />
-              <p class=" desk__text">Мобільні додатки</p>
+              <p class=" product__mob">Мобільні додатки</p>
             </div> 
           </li>
           <li class="product__picture">
-            <div class="desk">
+            <div class="product__wrap">
             <img src="img/img2.jpg" width="370" alt="фото3" />
-            <p class=" desk__text">Дизайнерські рішення</p>
+            <p class="product__mob">Дизайнерські рішення</p>
             </div>
           </li>
         </ul>
@@ -203,15 +203,15 @@
     </section>
 
 
-    <section class="product--comanda">
+    <section class="team">
       <div class="container">
-        <h2 class="product__text ">Наша команда</h2>
-        <ul class="product__list list">
-          <li class="product__foto">
+        <h2 class="team__text ">Наша команда</h2>
+        <ul class="team__list list">
+          <li class="team__foto">
             <img src="img/Ihor.jpg" width="270" alt="Ігор" />
-            <div class="team-img">
-              <h3 class="comanda">Ігор Дем'яненко</h3>
-              <p class="comanda__profession">Product Designer</p>
+            <div class="team__img">
+              <h3 class="team__name">Ігор Дем'яненко</h3>
+              <p class="team__profession">Product Designer</p>
 
               <ul class="socials list">
                 <li> <a class="socials__link link" href="https://Instagram.com" target="_blank"
@@ -245,11 +245,11 @@
               </ul>
             </div>
           </li>
-          <li class="product__foto">
+          <li class="team__foto">
             <img src="img/Olha.jpg" width="270" alt="Ольга" />
-            <div class="team-img">
-              <h3 class="comanda">Ольга Рєпіна</h3>
-              <p class="comanda__profession">Frontend Developer</p>
+            <div class="team__img">
+              <h3 class="team__name">Ольга Рєпіна</h3>
+              <p class="team__profession">Frontend Developer</p>
 
               <ul class="socials list">
                 <li> <a class="socials__link link" href="https://Instagram.com" target="_blank"
@@ -285,11 +285,11 @@
 
             </div>
           </li>
-          <li class="product__foto">
+          <li class="team__foto">
             <img src="img/Mikola.jpg" width="270" alt="Микола" />
-            <div class="team-img">
-              <h3 class="comanda">Микола Тарасов</h3>
-              <p class="comanda__profession">Marketing</p>
+            <div class="team__img">
+              <h3 class="team__name">Микола Тарасов</h3>
+              <p class="team__profession">Marketing</p>
               <ul class="socials list">
                 <li> <a class="socials__link link" href="https://Instagram.com" target="_blank"
                     rel="nofollow noopener noreferrer" aria-label="Instagram icon">
@@ -322,11 +322,11 @@
               </ul>
             </div>
           </li>
-          <li class="product__foto">
+          <li class="team__foto">
             <img src="img/Pavlo.jpg" width="270" alt="Михайло" />
-            <div class="team-img">
-              <h3 class="comanda">Михайло Єрмаков</h3>
-              <p class="comanda__profession">UI Designer</p>
+            <div class="team__img">
+              <h3 class="team__name">Михайло Єрмаков</h3>
+              <p class="team__profession">UI Designer</p>
               <ul class="socials list">
                 <li> <a class="socials__link link" href="https://Instagram.com" target="_blank"
                     rel="nofollow noopener noreferrer" aria-label="Instagram icon">
@@ -364,7 +364,7 @@
     </section>
     <section class="section-client">
       <div class="container">
-        <h2 class="product__text ">Постійні клієнти</h2>
+        <h2 class="section-client__text ">Постійні клієнти</h2>
         <ul class="section-client__list list">
           <li class="section-client__items">
             <a href="" class="section-client__link">
